crates/diffler/src/ui/snapshots/diffler__ui__status__tests__branch_popup_renders_as_a_bottom_split_over_status.snap
---
source: crates/diffler/src/ui/status.rs
assertion_line: 363
expression: render(&mut app).backend()
---
" Hint: <tab> toggle  s stage  u unstage  x discard  cc commit  ? help                                                   "
" Head:     main c1ac28f initial commit                                                                                  "
"                                                                                                                        "
" ▾ Untracked (1)                                                                                                        "
"     todo.md                                                                                                            "
"                                                                                                                        "
" ▾ Unstaged changes (1)                                                                                                 "
"     modified  src/lib.rs                                                                                               "
"                                                                                                                        "
" ▾ Staged changes (1)                                                                                                   "
"     new file  ci.yml                                                                                                   "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Branch ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"Actions                                                                                                                 "
" b  checkout                                                                                                            "
" c  create and checkout                                                                                                 "
" n  create                                                                                                              "
" D  delete                                                                                                              "
