crates/diffler/src/ui/snapshots/diffler__ui__status__tests__branches_unfolded_show_divergence_and_age.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main ↑1 745e5ca only here                                                                                    "
"                                                                                                                        "
"                                         nothing to review: working tree clean                                          "
"                                                                                                                        "
"▌▾ Unpushed (1)                                                                                                         "
"     745e5ca only here                                                                                         test  1h "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
" Repo      ─────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
" ▾ Branches (2)                                                                                                         "
"   * main ↑1                                                                                                         1h "
"     feat/topic                                                                                                      1h "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off                                                                                         "
