crates/diffler/src/ui/snapshots/diffler__ui__status__tests__cursor_on_a_diff_line_highlights_the_row.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main 1685505 initial commit                                                                                  "
" Changes   +2 -2  █████                                                                                                 "
"                                                                                                                        "
" ▾ Unstaged changes (1) +2 -2                                                                                           "
" ● data.txt +2 -2                                                                                                       "
" @@ -1,4 +1,4 @@                                                                                                        "
"▌   1      line 1                                                                                                       "
"▌        1 line one                                                                                                     "
"    2    2 line 2                                                                                                       "
"    3    3 line 3                                                                                                       "
"    4    4 line 4                                                                                                       "
" @@ -17,4 +17,4 @@ line 16                                                                                              "
"   17   17 line 17                                                                                                      "
"   18   18 line 18                                                                                                      "
"   19   19 line 19                                                                                                      "
"▌  20      line 20                                                                                                      "
"▌       20 line twenty                                                                                                  "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 1 file, 0 viewed                                                                      "
