crates/diffler/src/ui/snapshots/diffler__ui__status__tests__expanded_file_shows_inline_hunks_with_emphasis.snap
---
source: crates/diffler/src/ui/status.rs
expression: terminal.backend()
---
" Hint: c commit  b branch  s stage  x discard  ? help                                                                   "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
"                                                                                                                        "
" ▾ Untracked (1) +1 -0                                                                                                  "
" ? todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" M src/lib.rs +1 -1                                                                                                     "
" @@ -1,3 +1,3 @@                                                                                                        "
"    1    1 pub fn answer() -> u32 {                                                                                     "
"▌   2          41                                                                                                       "
"▌        2     42                                                                                                       "
"    3    3 }                                                                                                            "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" A ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main  mcp off  3 files, 0 viewed                                                                       "
